--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ main {
 .wrapper {
   border-radius: 0 10px 10px 0;
   background-color: var(--white);
-  padding: 1em 2em;
+  padding: 1.7em;
   position: relative;
 } 
 
